- Update pom.xml